Fix name spacing.

--- a/styles/utils.module.css
+++ b/styles/utils.module.css
@@ -336,7 +336,7 @@
 .scoreBox {
   display: flex;
   align-items: center;
-  margin: 0 1.5rem;
+  margin: 0 2.5rem;
   background-color: #f0f2f5;
   padding: 0.5rem 1rem;
   border-radius: 8px;
